# kanban

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  PRD.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/kanban/: __init__.py  auth.py  datawedge.py  db.py  deps.py  enums.py  oauth.py  protocols.py  schema.sql  services.py  zebra.py
src/kanban/repositories/: __init__.py  event.py  inventory.py  kanban.py  location.py  part.py  setting.py  user.py
src/kanban/routes/: __init__.py  api.py  auth.py  bins.py  dashboard.py  events.py  help.py  inventory.py  kanbans.py  locations.py  parts.py  reports.py  scan.py  settings.py  users.py
src/kanban/services/: __init__.py  dashboard.py  inventory.py  kanban.py  location.py  part.py  print.py  report.py  scan.py  user.py
src/kanban/templates/: base.html
src/kanban/templates/auth/: login.html  reset_password.html
src/kanban/templates/bins/: detail.html  form.html  label_print.html  list.html
src/kanban/templates/dashboard/: index.html
src/kanban/templates/events/: history.html
src/kanban/templates/help/: index.html
src/kanban/templates/inventory/: adjust.html  index.html
src/kanban/templates/kanbans/: card_print.html  detail.html  form.html  list.html
src/kanban/templates/locations/: detail.html  form.html  list.html
src/kanban/templates/parts/: detail.html  form.html  list.html
src/kanban/utils/: __init__.py  barcode.py  calculations.py  label.py  zebra.py
tests/: test_calculations.py  test_inventory_repository.py  test_scan_service.py  test_user_service.py
(+6 files in other folders)
